--- a/Bantoo!/html/Bantoo!.html
+++ b/Bantoo!/html/Bantoo!.html
@@ -5,22 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bantoo! - Beranda</title>
     <!-- CSS Global -->
-    <link rel="stylesheet" href="/Bantoo!/css/global.css">
-    <link rel="stylesheet" href="/Bantoo!/css/header.css">
-    <link rel="stylesheet" href="/Bantoo!/css/buttons.css">
-    <link rel="stylesheet" href="/Bantoo!/css/footer.css">
+    <link rel="stylesheet" href="../css/global.css">
+    <link rel="stylesheet" href="../css/header.css">
+    <link rel="stylesheet" href="../css/buttons.css">
+    <link rel="stylesheet" href="../css/footer.css">
     <!-- CSS Khusus Beranda -->
-    <link rel="stylesheet" href="/Bantoo!/css/home.css">
+    <link rel="stylesheet" href="../css/home.css">
 </head>
 <body>
     <header>
         <h1>Bantoo!</h1>
         <nav>
-            <a href="/Bantoo!/html/Bantoo!.html">Beranda</a>
-            <a href="/Bantoo!/html/kategori.html">Kategori Donasi</a>
-            <a href="/Bantoo!/html/kampanye.html">Kampanye</a>
-            <a href="/Bantoo!/html/profil.html">Profil</a>
-            <a href="/Bantoo!/html/lokasi.html">Lokasi Bencana</a>
+            <a href="../html/kategori.html">Kategori Donasi</a>
+            <a href="../html/Bantoo!.html">Beranda</a>
+            <a href="../html/kampanye.html">Kampanye</a>
+            <a href="../html/profil.html">Profil</a>
+            <a href="../html/lokasi.html">Lokasi Bencana</a>
             <span id="authButtons"></span> <!-- Tombol Login/Logout akan muncul di sini -->
         </nav>
     </header>
@@ -43,19 +43,19 @@
             <h2>Berita Terkini</h2>
             <div class="berita-container">
                 <div class="berita-item">
-                    <img src="/Bantoo!/foto/berita1.png" alt="Banjir di Jakarta">
+                    <img src="../foto/berita1.png" alt="Banjir di Jakarta">
                     <h3>Banjir di Jakarta</h3>
                     <p>Banjir melanda Jakarta, ribuan warga membutuhkan bantuan darurat. Mari bantu mereka dengan memberikan donasi atau menjadi relawan.</p>
                     <a href="#">Baca Selengkapnya</a>
                 </div>
                 <div class="berita-item">
-                    <img src="/Bantoo!/foto/berita2.png" alt="Gempa di Sulawesi">
+                    <img src="../foto/berita2.png" alt="Gempa di Sulawesi">
                     <h3>Gempa di Sulawesi</h3>
                     <p>Gempa berkekuatan 6,5 SR mengguncang Sulawesi Tengah. Bantuan darurat sangat dibutuhkan untuk korban gempa.</p>
                     <a href="#">Baca Selengkapnya</a>
                 </div>
                 <div class="berita-item">
-                    <img src="/Bantoo!/foto/berita3.png" alt="Kekeringan di NTT">
+                    <img src="../foto/berita3.png" alt="Kekeringan di NTT">
                     <h3>Kekeringan di NTT</h3>
                     <p>Kekeringan melanda Nusa Tenggara Timur, warga kesulitan mendapatkan air bersih. Bantu mereka dengan donasi air bersih.</p>
                     <a href="#">Baca Selengkapnya</a>
@@ -67,7 +67,7 @@
         <section id="apa-terjadi">
             <h2>Apa yang Sedang Terjadi?</h2>
             <div class="content">
-                <img src="/Bantoo!/foto/berita4.png" alt="Apa yang Sedang Terjadi">
+                <img src="../foto/berita4.png" alt="Apa yang Sedang Terjadi">
                 <div class="text">
                     <p>
                         Saat ini, banyak daerah di Indonesia yang membutuhkan bantuan darurat akibat bencana alam seperti banjir, gempa bumi, dan kekeringan. 
@@ -86,7 +86,7 @@
     </footer>
 
     <!-- JavaScript -->
-    <script src="/Bantoo!/js/auth.js"></script>
-    <script src="/Bantoo!/js/main.js"></script>
+    <script src="../js/auth.js"></script>
+    <script src="../js/main.js"></script>
 </body>
 </html>
