--- a/Bantoo!/html/kampanye.html
+++ b/Bantoo!/html/kampanye.html
@@ -5,23 +5,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bantoo! - Kampanye</title>
     <!-- CSS Global -->
-    <link rel="stylesheet" href="/Bantoo!/css/global.css">
-    <link rel="stylesheet" href="/Bantoo!/css/header.css">
-    <link rel="stylesheet" href="/Bantoo!/css/buttons.css">
-    <link rel="stylesheet" href="/Bantoo!/css/footer.css">
-    <link rel="stylesheet" href="/Bantoo!/css/form.css">
+    <link rel="stylesheet" href="../css/global.css">
+    <link rel="stylesheet" href="../css/header.css">
+    <link rel="stylesheet" href="../css/buttons.css">
+    <link rel="stylesheet" href="../css/footer.css">
+    <link rel="stylesheet" href="../css/form.css">
     <!-- CSS Khusus Kampanye -->
-    <link rel="stylesheet" href="/Bantoo!/css/kampanye.css">
+    <link rel="stylesheet" href="../css/kampanye.css">
 </head>
 <body>
     <header>
         <h1>Bantoo!</h1>
         <nav>
-            <a href="/Bantoo!/html/Bantoo!.html">Beranda</a>
-            <a href="/Bantoo!/html/kategori.html">Kategori Donasi</a>
-            <a href="/Bantoo!/html/kampanye.html">Kampanye</a>
-            <a href="/Bantoo!/html/profil.html">Profil</a>
-            <a href="/Bantoo!/html/lokasi.html">Lokasi Bencana</a>
+            <a href="../html/Bantoo!.html">Beranda</a>
+            <a href="../html/kategori.html">Kategori Donasi</a>
+            <a href="../html/kampanye.html">Kampanye</a>
+            <a href="../html/profil.html">Profil</a>
+            <a href="../html/lokasi.html">Lokasi Bencana</a>
             <span id="authButtons"></span> <!-- Tombol Login/Logout -->
         </nav>
     </header>
@@ -99,7 +99,7 @@
     </footer>
 
     <!-- JavaScript -->
-    <script src="/Bantoo!/js/auth.js"></script>
-    <script src="/Bantoo!/js/kampanye.js"></script>
+    <script src="../js/auth.js"></script>
+    <script src="../js/kampanye.js"></script>
 </body>
 </html>
