--- a/Bantoo!/html/kategori.html
+++ b/Bantoo!/html/kategori.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bantoo! - Kategori Donasi</title>
     <!-- CSS Global -->
-    <link rel="stylesheet" href="/Bantoo!/css/global.css">
-    <link rel="stylesheet" href="/Bantoo!/css/header.css">
-    <link rel="stylesheet" href="/Bantoo!/css/buttons.css">
+    <link rel="stylesheet" href="../css/global.css">
+    <link rel="stylesheet" href="../css/header.css">
+    <link rel="stylesheet" href="../css/buttons.css">
     <link rel="stylesheet" href="../css/footer.css">
     <!-- CSS Khusus Kategori -->
     <link rel="stylesheet" href="../css/kategori.css">
@@ -16,11 +16,11 @@
     <header>
         <h1>Bantoo!</h1>
         <nav>
-            <a href="/Bantoo!/html/Bantoo!.html">Beranda</a>
-            <a href="/Bantoo!/html/kategori.html">Kategori Donasi</a>
-            <a href="/Bantoo!/html/kampanye.html">Kampanye</a>
-            <a href="/Bantoo!/html/profil.html">Profil</a>
-            <a href="/Bantoo!/html/lokasi.html">Lokasi Bencana</a>
+            <a href="../html/Bantoo!.html">Beranda</a>
+            <a href="../html/kategori.html">Kategori Donasi</a>
+            <a href="../html/kampanye.html">Kampanye</a>
+            <a href="../html/profil.html">Profil</a>
+            <a href="../html/lokasi.html">Lokasi Bencana</a>
             <span id="authButtons"></span> <!-- Tombol Login/Logout akan muncul di sini -->
         </nav>
     </header>
@@ -52,7 +52,7 @@
     </footer>
 
     <!-- JavaScript -->
-    <script src="/Bantoo!/js/auth.js"></script>
-    <script src="/Bantoo!/js/main.js"></script>
+    <script src="../js/auth.js"></script>
+    <script src="../js/main.js"></script>
 </body>
 </html>
