--- a/Bantoo!/html/Bantoo!.html
+++ b/Bantoo!/html/Bantoo!.html
@@ -16,11 +16,12 @@
     <header>
         <h1>Bantoo!</h1>
         <nav>
-            <a href="../html/kategori.html">Kategori Donasi</a>
             <a href="../html/Bantoo!.html">Beranda</a>
+            <a href="../html/kategori.html">Kategori Donasi</a>
             <a href="../html/kampanye.html">Kampanye</a>
             <a href="../html/profil.html">Profil</a>
             <a href="../html/lokasi.html">Lokasi Bencana</a>
+            <a href="../html/company-profile.html">Company Profile</a>
             <span id="authButtons"></span> <!-- Tombol Login/Logout akan muncul di sini -->
         </nav>
     </header>
