--- a/Bantoo!/html/donasi.html
+++ b/Bantoo!/html/donasi.html
@@ -20,12 +20,12 @@
             <a href="../html/kampanye.html">Kampanye</a>
             <a href="../html/profil.html">Profil</a>
             <a href="../html/lokasi.html">Lokasi Bencana</a>
+            <a href="../html/company-profile.html">Company Profile</a>
             <span id="authButtons"></span> <!-- Tombol Login/Logout -->
         </nav>
     </header>
 
     <main>
-        
         <section id="donasi">
             <h2>Formulir Donasi</h2>
             <form id="donasiForm">
