--- a/Bantoo!/html/register.html
+++ b/Bantoo!/html/register.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="../css/header.css">
     <link rel="stylesheet" href="../css/buttons.css">
     <link rel="stylesheet" href="../css/form.css">
+    <link rel="stylesheet" href="../css/footer.css">
 </head>
 <body>
     <header>
